[navigation-arrow] [bug-fix] Added `z-index: 2` to the left arrow since it is wrapped in some cases.

--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -271,6 +271,7 @@
 
         .fs-prev-package {
           visibility: hidden;
+          z-index: 2;
         }
 
         .fs-packages {
